# ArcanumBot

./: .gitignore  README.md  arcanum_bot.py  config_example.py  flake.nix  justfile  makefile  pyproject.toml  requirements.txt  setup.py  yodalinks.txt
.github/workflows/: build.yml  ci.yml  flake_check.yml
arcanumbot/: __init__.py  __main__.py  arcanum.ini  bot.py  checks.py  constants.py  context.py  db.py  games.py  menus.py  utils.py
arcanumbot/extensions/: aacoins.py  cooldowns.py  error_handler.py  events.py  fun.py  general.py
cogs/: Aacoins.py  Fun.py
extras/: checks.py
modules/: arcanumbot.nix
