[tool.poetry]
name = "arcanumbot"
version = "2.2.4"
description = "Discord bot for the arcanum"
authors = ["StarrFox <starrfox6312@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
jishaku = "^2.5.2"
pendulum = "^3.0.0"
numpy = "^2.0.0"
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus"}
humanize = "^4.9.0"
"discord.py" = "^2.3.2"
psutil = "^5.9.6"
click = "^8.1.7"
uvloop = {version = "^0.19.0", markers = "platform_system == 'Linux'"}
asyncpg = "^0.29.0"

[tool.poetry.scripts]
arcanumbot = "arcanumbot.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
